--- a/coursework/coursework.html
+++ b/coursework/coursework.html
@@ -80,11 +80,11 @@
 
         <div class="coursework_dropdown">
             <div class="coursework-example-container">
-                <div class="coursework-quote">
+                <div class="coursework-quote" style="background-color:rgba(196, 196, 196);">
                     <h2>Edexcel A Level - A* Coursework Example 1:</h2>
                 </div>
 
-                <a href="#" class="drop_down">
+                <a href="#" class="drop_down" style="background-color:rgba(196, 196, 196); border-top: 2px solid rgba(196, 196, 196);">
                     <span class="bar"></span>
                     <span class="bar"></span>
                 </a>
