--- a/pastpapers/papers_level/pastpapers_alevel.html
+++ b/pastpapers/papers_level/pastpapers_alevel.html
@@ -631,10 +631,10 @@
 
         <div class="pastpaper_dropdown">
             <div class="pastpaper-example-container">
-                <div class="pastpaper-quote" style="background-color:rgb(0, 255, 149); border-bottom: 2px solid rgba(0, 255, 149);">
+                <div class="pastpaper-quote" style="background-color:rgb(0, 255, 149); border-bottom: 2px solid rgb(0, 255, 149);">
                     <h2>DTBase A-Level past papers</h2>
                 </div>
-                <a href="#" class="drop_down_pp" style="background-color:rgba(0, 255, 149); border-bottom: 2px solid rgba(0, 255, 149);">
+                <a href="#" class="drop_down_pp" style="background-color:rgba(0, 255, 149); border-bottom: 2px solid rgb(0, 255, 149);">
                     <span class="bar"></span>
                     <span class="bar"></span>
                 </a>
@@ -646,7 +646,7 @@
                     }
                 </style>
                 <div class="portfolio-items-wrapper-notes_single">
-                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 255, 149);">
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 255, 149); border-bottom: 2px solid rgb(0, 255, 149);">
                         <div class="portfolio-img-background-pastpaper"></div>
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
