--- a/pastpapers/papers_level/pastpapers_gcse.html
+++ b/pastpapers/papers_level/pastpapers_gcse.html
@@ -606,7 +606,7 @@
                     }
                 </style>
                 <div class="portfolio-items-wrapper-notes_single">
-                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 255, 149);">
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 255, 149); border-bottom: 2px solid rgba(0, 255, 149);">
                         <div class="portfolio-img-background-pastpaper"></div>
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
