--- a/notes/notes_topics/notes_pages/textiles_materials_notes.html
+++ b/notes/notes_topics/notes_pages/textiles_materials_notes.html
@@ -88,10 +88,23 @@
                     <h2>The following page of notes will cover:</h2>
                     <ul style="font-size: medium;">
                         <li>Natural fibres</li>
-                        <li>Manmade fibres</li>
+                        <li>Manmade (Synthetic) fibres</li>
                         <li>Textile treatments</li>
                     </ul>
                 </div>
+
+                <div class="notes-content-subheader">
+                    <h2 id="Naturalfibres"><hr>General comparisons of Natural fibres and Manmade (Synthetic) Fibres<hr></h2>
+                </div>
+
+                <h3 style="font-size: medium; color: blue;">Using these general rules will help you answer most questions relating to Natural and Manmade fibres:</h3>
+                <ul style="font-size: medium;">
+                    <li><b>Natural fibres</b> tend to be <span class="custom-highlight">environmentally friendly</span> as they are made from animals, plants and insects</li>
+                    <li><b>Natural fibres</b> are <span class="custom-highlight">biodegradeable</span></li>
+                    <li><b>Manmade fibres</b> can be made in <span class="custom-highlight">any length or thickness</span></li>
+                    <li><b>Manmade fibres</b> are made from  <span class="custom-highlight">coal and oil</span> making them non-renewable and harmful for the environment</li>
+                </ul>
+
 
                 <div class="notes-content-subheader">
                     <h2 id="Naturalfibres"><hr>Natural fibres<hr></h2>
