--- a/notes/notes_topics/notes_pages/marking_out_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/marking_out_techniques_notes.html
@@ -151,6 +151,12 @@
                     <div class="notes-content-subheader">
                         <h2><hr><hr></h2>
                     </div>
+
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Marking_out_Q&A.pdf">Marking Out Questions</a>
+                    </div>
                 </div>
             </div>
         </div>
