--- a/notes/notes_topics/notes_pages/specialist_marking_tools_notes.html
+++ b/notes/notes_topics/notes_pages/specialist_marking_tools_notes.html
@@ -217,6 +217,16 @@
                     <div class="notes-content-picture" >
                         <img src="../../../images/notes_pages_images/gonogo.png" alt="Diagram of shape dimensions">
                     </div>
+
+                    <div class="notes-content-subheader">
+                        <h2><hr><hr></h2>
+                    </div>
+
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Specialist_marking_tools_Q&A.pdf">Specialist Marking Tools Questions</a>
+                    </div>
                 </div>
             </div>
         </div>
