--- a/notes/notes_topics/notes_pages/joining_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/joining_techniques_notes.html
@@ -483,7 +483,7 @@
                         <ol><li>The two materials being joined are cleaned before welding</li>
                         <li>Then the two materials are held together using a former</li>
                         <li>Flux is applied to prevent the join area from oxidation</li>
-                        <li>A welding torch then heat the join area and a brazinf rod is used to fill the joint area</li></ol>
+                        <li>A welding torch then heat the join area and a brazing rod is used to fill the joint area</li></ol>
                     </ul>
                 <table>
                     <tr class="notes-table-header">
