--- a/notes/notes_topics/notes_pages/lamination_notes.html
+++ b/notes/notes_topics/notes_pages/lamination_notes.html
@@ -80,14 +80,14 @@
 
         <div class="notes-content-wrapper">
             <div class="notes-content-header" style="background-image:url(../../../images/PTST/PTST_note_lamination.jpg)" title="wood laminating background">
-                <h1 style="color:white"><u><b>Lamination</b></u></h1>
+                <h1 style="color:white"><u><b>Lamination (Woods)</b></u></h1>
             </div>
 
             <div class="notes-content">
                 <div class="notes-content-intro">
                 </div>
 
-                <h3 id="WoodLamination"><b><u>Lamination:</b></u></h3>
+                <h3 id="WoodLamination"><b><u>Lamination (Woods):</b></u></h3>
                 <div class="notes-content-picture" >
                     <img src="../../../images/notes_pages_images/Lamination_note_photo.jpg" alt="Diagram of shape dimensions">
                 </div>
@@ -97,7 +97,7 @@
                         <ol><li>Thin layers of wood are cut out and stuck together using adhesive inbetween each layer (usually PVA)</li>
                         <li>A former is used to achieve the desired shape</li>
                         <li>Clamps/vaccuum bag apply pressure whilst the adhesive sets</li>
-                        <li>Once formed the laminated timber xan be trimmed and sized</li></ol>
+                        <li>Once formed the laminated timber can be trimmed and sized</li></ol>
                     </ul></h3>
                 <table>
                     <tr class="notes-table-header">
