--- a/notes/notes_topics/notes_pages/maths_surface_area_and_volume.html
+++ b/notes/notes_topics/notes_pages/maths_surface_area_and_volume.html
@@ -161,7 +161,7 @@
 
 
                 <h3><b>Question 2)</b></h3>
-                <p>The figure shows some acylic to be cut for a laptop. Calculate the area of the acrylic sheep. All measurements are in mm.</p>
+                <p>The figure shows some acylic to be cut for a laptop. Calculate the area of the acrylic sheet. All measurements are in mm.</p>
 
 
                 <div class="notes-content-picture" >
