--- a/notes/notes_topics/notes_pages/moulding_notes.html
+++ b/notes/notes_topics/notes_pages/moulding_notes.html
@@ -227,7 +227,7 @@
                             <li>Plastic forced into the die</li>
                             <li>The plastic is extruded 'pulled' throug the die and cooled</li>
                             <li>Rollers pull plastic continuously</li>
-                            <li>The extruded product is cut to the desired lenghts</li></ol>
+                            <li>The extruded product is cut to the desired lengths</li></ol>
                     </ul></h3>
                 <table>
                     <tr class="notes-table-header">
