--- a/notes/notes_topics/notes_pages/joining_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/joining_techniques_notes.html
@@ -511,6 +511,11 @@
                 <h3><b>Uses: </b>General engineering, bicycle frame<br><br></h3>
 
                 <h3 id="HardSoldering"><b><u></u>Hard soldering:</b></h3>
+
+                <div class="notes-content-picture" >
+                    <img src="../../../images/notes_pages_images/soldering.PNG" alt="Diagram of shape dimensions">
+                </div>
+
                 <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>The two metals being joined is cleaned</li>
@@ -542,6 +547,11 @@
                 <h3><b>Uses: </b>Jewellery, ornaments, silverware, model engines<br><br></h3>
 
                 <h3 id="SoftSoldering"><b><u></u>Soft soldering:</b></h3>
+
+                <div class="notes-content-picture" >
+                    <img src="../../../images/notes_pages_images/soldering.PNG" alt="Diagram of shape dimensions">
+                </div>
+
                 <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>The two metals being joined is cleaned</li>
