--- a/notes/notes_topics/notes_pages/joining_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/joining_techniques_notes.html
@@ -513,7 +513,7 @@
                 <h3 id="HardSoldering"><b><u></u>Hard soldering:</b></h3>
 
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/soldering.PNG" alt="Diagram of shape dimensions">
+                    <img src="../../../images/notes_pages_images/soldering.png" alt="Diagram of shape dimensions">
                 </div>
 
                 <p><b>How it works:</b></p>
@@ -549,7 +549,7 @@
                 <h3 id="SoftSoldering"><b><u></u>Soft soldering:</b></h3>
 
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/soldering.PNG" alt="Diagram of shape dimensions">
+                    <img src="../../../images/notes_pages_images/soldering.png" alt="Diagram of shape dimensions">
                 </div>
 
                 <p><b>How it works:</b></p>
