--- a/notes/notes_topics/notes_pages/joining_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/joining_techniques_notes.html
@@ -478,6 +478,11 @@
                 <h3><b>Uses: </b>Cars, bike frames, metal barriers<br><br></h3>
 
                 <h3 id="Brazing"><b><u></u>Brazing:</b></h3>
+
+                <div class="notes-content-picture" >
+                    <img src="../../../images/notes_pages_images/brazing.png" alt="Diagram of shape dimensions">
+                </div>
+
                 <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>The two materials being joined are cleaned before welding</li>
