Consumer rights act

--- a/notes/notes_topics/notes_pages/consumer_rights_notes.html
+++ b/notes/notes_topics/notes_pages/consumer_rights_notes.html
@@ -88,21 +88,26 @@
                 </div>
 
                 <h3 id="consumerrightsact"><b><u>Consumer rights act (2015):</b></u></h3>
+                <h3>Since the Act came into force, consumers have had the following legal rights:</h3>
                 <h3><ul>
-                        <li> Designed to ensure that all products must be of a satisfactory 
-                            quality, that they are fit for purpose and as described by the 
+                        <li>Designed to ensure that all products must be of a <b>satisfactory 
+                            quality</b>, that they are <b>fit for purpose</b> and <b>as described</b> by the 
                             retailer</li>
-                        <li>The legislation applies to all products including those that are 
-                            provided digitally such as download software or are web based</li>
+                        <li>The legislation applies to all products <b>including</b> those that are 
+                            provided <b>digitally</b> such as download software or are web based</li>
                         <li>The legislation protects the consumer by requiring goods to be in 
                             full working order when bought, although the expected standard 
                             of the product if often linked to the price paid</li>
-                        <li>Products should be suitable for their intended use (waterproof 
+                        <li>Products should be <b>suitable for their intended use</b> (waterproof 
                             jacket being waterproof)</li>
-                        <li>The legislation also allows consumers to have products 
-                            repaired/replaced if they fail to meet the above criteria</li>
+                        <li>The legislation also <b>allows consumers to have products 
+                            repaired/replaced</b> if they fail to meet the above criteria</li>
                         <li>Some of these rights extend for the first 6 months of ownership</li>
                     </ul></h3>
+                    <h3>Read more here:<br><br>
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\current_legislation_exercises\Consumer_Rights_Act.pdf">Consumer Rights Act 2015</a>
+                    </div>
                     <div class="notes-content-subheader">
                         <h2><hr><hr></h2>
                     </div>
