Consumer rights act

--- a/notes/notes_topics/notes_pages/consumer_rights_notes.html
+++ b/notes/notes_topics/notes_pages/consumer_rights_notes.html
@@ -106,7 +106,7 @@
                     </ul></h3>
                     <h3>Read more here:<br><br>
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="..\..\..\documents\Q&A\current_legislation_exercises\Consumer_Rights_Act.pdf">Consumer Rights Act 2015</a>
+                        <a href="..\..\..\documents\Q&A\current_legislation_exercises\Consumer_Rights_act.pdf">Consumer Rights Act 2015</a>
                     </div>
                     <div class="notes-content-subheader">
                         <h2><hr><hr></h2>
