--- a/notes/notes_topics/notes_pages/property_rights_notes.html
+++ b/notes/notes_topics/notes_pages/property_rights_notes.html
@@ -104,6 +104,14 @@
                     <li>Enhance your brand image</li>
                     <li>Negotiate financing</li>
                 </ul></h3>
+                <h3>Patents have some <b>disadvantages</b> though:</h3>
+                <h3><ul>
+                    <li>Time consuming to obtain</li>
+                    <li>Designs become publicly available</li>
+                    <li>Patents are often not that effective as patents are copied via legal loopholes</li>
+                    <li>Costly to obtain</li>
+                    <li>Need renewing every 4 years and time limited to 20 years</li>
+                </ul></h3>
                 <h3><b>Examples:</b> Apple vs Samsung, Dyson vs Hoover</h3>
                     <div class="notes-content-subheader">
                         <h2><hr><hr></h2>
