Standards for products

--- a/notes/notes_topics/notes_pages/standard_for_products_notes.html
+++ b/notes/notes_topics/notes_pages/standard_for_products_notes.html
@@ -135,6 +135,16 @@
                     <div class="notes-content-subheader">
                         <h2><hr><hr></h2>
                     </div>
+                    <h3><b><u>Why conform to standards?</b></u></h3>
+                <h3><ul>
+                        <li>The consumer has greater trust in the company</li>
+                        <li>The company gains a competitive edge over other companies without the standards</li>
+                        <li>Reassures companies that use the companies items that they are safe</li>
+                        <li>Increases their reputation in the market</li>
+                    </ul></h3>
+                    <div class="notes-content-subheader">
+                        <h2><hr><hr></h2>
+                    </div>
 
                     <h3><b>Topic test:</b></h3>
 
