--- a/notes/notes_topics/notes_pages/consumer_rights_notes.html
+++ b/notes/notes_topics/notes_pages/consumer_rights_notes.html
@@ -104,7 +104,7 @@
                             repaired/replaced</b> if they fail to meet the above criteria</li>
                         <li>Some of these rights extend for the first 6 months of ownership</li>
                     </ul></h3>
-                    <h3>Read more here:<br><br>
+                    <h3>Read more here:</h3>
                     <div class="blurbox" style="background-color: #bdbdbd;">
                         <a href="..\..\..\documents\Q&A\current_legislation_exercises\Consumer_Rights_act.pdf">Consumer Rights Act 2015</a>
                     </div>
