--- a/notes/notes_topics/notes_pages/joining_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/joining_techniques_notes.html
@@ -447,6 +447,11 @@
                 <h3><b>Uses: </b>General engineering<br><br></h3>
 
                 <h3 id="MIGWelding"><b><u></u>MIG welding:</b></h3>
+
+                <div class="notes-content-picture" >
+                    <img src="../../../images/notes_pages_images/mig.png" alt="Diagram of shape dimensions">
+                </div>
+
                 <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Used to weld thin metals</li>
