--- a/notes/notes_topics/notes_pages/joining_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/joining_techniques_notes.html
@@ -414,6 +414,9 @@
                     <h2 id="Heat"><hr>Heat<hr></h2>
                 </div>
                 <h3 id="OxyAcetyleneWelding"><b><u></u>Oxy acetylene welding:</b></h3>
+                <div class="notes-content-picture" >
+                    <img src="../../../images/notes_pages_images/oxy.png" alt="Diagram of shape dimensions">
+                </div>
                 <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Used to weld low carbon steel</li>
