--- a/notes/notes_topics/notes_pages/modern_manufacturing_methods_notes.html
+++ b/notes/notes_topics/notes_pages/modern_manufacturing_methods_notes.html
@@ -469,7 +469,7 @@
                             <li>Storage costs reduced</li>
                             <li>Highly automated - reduced labour costs</li>
                             <li>Reduced human error - less waste</li>
-                            <li></li>Allows flexibility<li/>
+                            <li>Allows flexibility</li>
                             <li>Business increases reputation</li>
                         </ul>
                     </td>
