--- a/notes/notes_topics/notes_pages/maths_equations.html
+++ b/notes/notes_topics/notes_pages/maths_equations.html
@@ -80,16 +80,16 @@
 
         <div class="notes-content-wrapper">
             <div class="notes-content-header" style="background-image:url(../../../images/mathsforDT.jpg)" title="maths background">
-                <h1 style="color:white"><u><b>Mathematics</b></u></h1>
+                <h1 style="color:white"><u><b>Essential Equations for DT</b></u></h1>
             </div>
 
             <div class="notes-content">
 
         
                                
-            <div class="comingsoon">
-                DT maths equations coming soon!
-            </div>
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\maths_exercises\maths_equations.pdf">Equation sheet</a>
+                </div>
                 <!-- <div class="download-page">
                     <br><h3>Get a copy of this page:
                         <a href="..\..\..\documents\1. Materials\DTBase_Materials_Woods.pdf">Mathematics</a>
