--- a/notes/notes_topics/notes_pages/finishing_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/finishing_techniques_notes.html
@@ -229,7 +229,11 @@
                 <h3><b>Uses: </b>Window frames, bike frames<br><br></h3>
 
                 <h3 id="Electro-Plating"><b><u>Electro-plating:</b></u></h3>
+                <div class="notes-content-picture" >
+                    <img src="../../../images/notes_pages_images/electroplating.png" alt="Diagram of shape dimensions">
+                </div>
                 <h3>
+
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>A cheap metal is coated onto a metal to protect it</li>
