AQA + OCR GCSE pp

--- a/pastpapers/papers_level/pastpapers_gcse.html
+++ b/pastpapers/papers_level/pastpapers_gcse.html
@@ -501,6 +501,19 @@
                         <div class="portfolio-img-background-pastpaper"></div>
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\AQA_GCSE\AQA_2023P1Q.pdf">2023 Question Paper 1</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\AQA_GCSE\AQA_2023P1MS.pdf">2023 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(255, 0, 0); border-bottom: 2px solid rgba(255, 0, 0);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
                                 <a href="..\..\documents\pastpapers\AQA_GCSE\AQA_2022P1Q.pdf">2022 Question Paper 1</a>
                             </div>
                             <div class="blurbox">
@@ -554,6 +567,19 @@
                         <div class="portfolio-img-background-pastpaper"></div>
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\WJEC_GCSE\WJEC_2023P1Q_PD.pdf">2023 Question Paper (Product Design)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\WJEC_GCSE\WJEC_2023P1MS_PD.pdf">Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(255, 0, 255);border-bottom: 2px solid rgba(255, 0, 255); ">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
                                 <a href="..\..\documents\pastpapers\WJEC_GCSE\WJEC_2022P1Q_PD.pdf">2022 Question Paper (Product Design)</a>
                             </div>
                             <div class="blurbox">
@@ -596,6 +622,22 @@
                     }
                 </style>
                 <div class="portfolio-items-wrapper-notes_single">
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(153, 0, 255); border-bottom: 2px solid rgba(153, 0, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\OCR_GCSE\OCR_2023P1Q.pdf">2023 Question paper</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\OCR_GCSE\OCR_2023P1RB.pdf">2023 Resource booklet</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\OCR_GCSE\OCR_2023P1MS.pdf">2023 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+
                     <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(153, 0, 255); border-bottom: 2px solid rgba(153, 0, 255);">
                         <div class="portfolio-img-background-pastpaper"></div>
                         <div class="img-text-wrapper-notes">
