--- a/pastpapers/papers_level/pastpapers_alevel.html
+++ b/pastpapers/papers_level/pastpapers_alevel.html
@@ -714,6 +714,53 @@
 
         <div class="pastpaper_dropdown">
             <div class="pastpaper-example-container">
+                <div class="pastpaper-quote" style="background-color:rgb(0, 4, 255); border-bottom: 2px solid rgb(0, 4, 255);">
+                    <h2>CIE A-Level past papers</h2>
+                </div>
+                <a href="#" class="drop_down_pp" style="background-color:rgba(0, 4, 255); border-bottom: 2px solid rgb(0, 4, 255);">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
+            </div>
+            <div class="content-wrapper">
+                <style>
+                    .img-text-wrapper-notes {
+                        white-space: nowrap;
+                    }
+                </style>
+                <div class="portfolio-items-wrapper-notes_single">
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 4, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\CIE_A_Level\CIE_2022_P1Q.pdf">2022 Question Paper 1</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\CIE_A_Level\CIE_2022_P1MS.pdf">2022 Question Paper 1 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 4, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\CIE_A_Level\CIE_2022_P3Q.pdf">2022 Question Paper 3</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\CIE_A_Level\CIE_2022_P3MS.pdf">2022 Question Paper 3 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+        
+                    <!-- Add more portfolio items for the second exam board if needed -->
+        
+                </div>
+            </div>
+        </div>
+
+
+        <div class="pastpaper_dropdown">
+            <div class="pastpaper-example-container">
                 <div class="pastpaper-quote" style="background-color:rgb(0, 255, 149); border-bottom: 2px solid rgb(0, 255, 149);">
                     <h2>DTBase A-Level past papers</h2>
                 </div>
