CIE past papers

--- a/pastpapers/papers_level/pastpapers_alevel.html
+++ b/pastpapers/papers_level/pastpapers_alevel.html
@@ -729,7 +729,7 @@
                     }
                 </style>
                 <div class="portfolio-items-wrapper-notes_single">
-                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 4, 255);">
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 4, 255); border-bottom: 2px solid rgb(0, 4, 255);">
                         <div class="portfolio-img-background-pastpaper"></div>
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
@@ -740,7 +740,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 4, 255);">
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 4, 255); border-bottom: 2px solid rgb(0, 4, 255);">
                         <div class="portfolio-img-background-pastpaper"></div>
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
