--- a/pastpapers/papers_level/pastpapers_gcse.html
+++ b/pastpapers/papers_level/pastpapers_gcse.html
@@ -704,6 +704,86 @@
             </div>
         </div>
 
+        <div class="pastpaper_dropdown">
+            <div class="pastpaper-example-container">
+                <div class="pastpaper-quote" style="background-color:rgb(0, 4, 255); border-bottom: 2px solid rgba(0, 4, 255);">
+                    <h2>CIE GCSE past papers</h2>
+                </div>
+                <a href="#" class="drop_down_pp" style="background-color:rgba(0, 4, 255); border-bottom: 2px solid rgba(0, 4, 255);">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
+            </div>
+            <div class="content-wrapper">
+                <style>
+                    .img-text-wrapper-notes {
+                        white-space: nowrap;
+                    }
+                </style>
+                <div class="portfolio-items-wrapper-notes_single">
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 4, 255); border-bottom: 2px solid rgba(0, 4, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P1Q.pdf">2022 Question paper 1</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P1IN1.pdf">2022 Insert booklet 1</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P1IN2.pdf">2022 Insert booklet 2</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P1MS.pdf">2022 Paper 1 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 4, 255); border-bottom: 2px solid rgba(0, 4, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P3Q.pdf">2022 Question paper 3</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P3MS.pdf">2022 Paper 3 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 4, 255); border-bottom: 2px solid rgba(0, 4, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P4Q.pdf">2022 Question paper 4</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P4MS.pdf">2022 Paper 4 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 4, 255); border-bottom: 2px solid rgba(0, 4, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P5Q.pdf">2022 Question paper 5</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P5IN1.pdf">2022 Insert booklet 1</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P5MS.pdf">2022 Paper 5 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+        
+                    <!-- Add more portfolio items for the second exam board if needed -->
+        
+                </div>
+            </div>
+        </div>
+
 
         <div class="pastpaper_dropdown">
             <div class="pastpaper-example-container">
