--- a/pastpapers/papers_level/pastpapers_gcse.html
+++ b/pastpapers/papers_level/pastpapers_gcse.html
@@ -721,20 +721,22 @@
                     }
                 </style>
                 <div class="portfolio-items-wrapper-notes_single">
-                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 4, 255); border-bottom: 2px solid rgba(0, 4, 255);">
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 4, 255); border-bottom: 2px solid rgba(0, 4, 255); padding: 0; box-sizing: border-box;">
                         <div class="portfolio-img-background-pastpaper"></div>
-                        <div class="img-text-wrapper-notes">
-                            <div class="blurbox">
-                                <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P1Q.pdf">2022 Question paper 1</a>
+                        <div class="img-text-wrapper-notes" style="display: flex; flex-direction: column; gap: 0;">
+                            <div class="blurbox" style="margin: 0; padding: 0;">
+                                <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P1Q.pdf" style="font-size: 18px;">2022 Question paper 1</a>
                             </div>
-                            <div class="blurbox">
-                                <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P1IN1.pdf">2022 Insert booklet 1</a>
+                            <div style="display: flex; gap: 0;">
+                                <div class="blurbox" style="margin: 0; padding: 0;">
+                                    <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P1IN1.pdf" style="font-size: 18px;">2022 Insert booklet 1</a>
+                                </div>
+                                <div class="blurbox" style="margin: 0; padding: 0;">
+                                    <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P1IN2.pdf" style="font-size: 18px;">2022 Insert booklet 2</a>
+                                </div>
                             </div>
-                            <div class="blurbox">
-                                <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P1IN2.pdf">2022 Insert booklet 2</a>
-                            </div>
-                            <div class="blurbox">
-                                <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P1MS.pdf">2022 Paper 1 Markscheme</a>
+                            <div class="blurbox" style="margin: 0; padding: 0;">
+                                <a href="..\..\documents\pastpapers\CIE_GCSE\CIE_2022_P1MS.pdf" style="font-size: 18px;">2022 Paper 1 Markscheme</a>
                             </div>
                         </div>
                     </div>
