--- a/notes/notes_topics/notes_pages/technological_developments_notes.html
+++ b/notes/notes_topics/notes_pages/technological_developments_notes.html
@@ -98,7 +98,7 @@
 
 
                 <h3 id="ConsumerSociety"><b>The consumer society:</b></h3>
-                <h3>A society in whcih the buying and selling of goods and services is the most important social and economic activity</h3>
+                <h3>A society in which the buying and selling of goods and services is the most important social and economic activity</h3>
 
                 <h3 id="BuiltInObsolescence"><b>Built in obsolescence:</b></h3>
                 <h3>A policy of planning or designing a product with an artificially limited useful life, so it will become obsolete</h3>
