--- a/notes/notes_topics/notes_pages/modern_manufacturing_methods_notes.html
+++ b/notes/notes_topics/notes_pages/modern_manufacturing_methods_notes.html
@@ -554,7 +554,7 @@
                             <li>No room for mistakes</li>
                             <li>Need a robust IT system</li>
                             <li>High QA/QC can be expensive</li>
-                            <li>>Employees can be reluctant to change to new ways
+                            <li>Employees can be reluctant to change to new ways
                         </ul>
                     </td>
                 </tr>
