Fix moulding notes

--- a/notes/notes_topics/notes_pages/moulding_notes.html
+++ b/notes/notes_topics/notes_pages/moulding_notes.html
@@ -184,7 +184,7 @@
                         <ol><li>Create mould (air gaps, tapers, angles, rounded egdges)</li>
                         <li>Place the mould on the platen and lower</li>
                         <li>Clamps HIPS and heat until 'bouncy'</li>
-                        <li>Raise platen into mould</li>
+                        <li>Raise platen into plastic</li>
                         <li>Vacuum pump air out</li>
                         <li>Blowback a little bit of air to help release mould</li></ol>
                     </ul></h3>
