--- a/notes/notes_topics/notes_pages/project_management_notes.html
+++ b/notes/notes_topics/notes_pages/project_management_notes.html
@@ -129,6 +129,10 @@
                         <li>Multiple department team (designers, engineers, marketing etc)</li>
                         <li>Needs of user/product is at forefront of all decisions</li>
                         <li>Agile/flexible/fast moving based on constant feedback</li>
+                        <li>Led by scrum master</li>
+                        <li>Timeboxing (allocating and scheduling time to activities)</li>
+                        <li>Iterative development</li>
+                        <li>Teamwork is at the centre of the process</li>
                     </ul></h3>
                     <h3>Burn down charts:</h3>
                     <h3><ul>
@@ -137,6 +141,13 @@
                     <h3>Sprint meeting:</h3>
                     <h3><ul>
                         <li>Daily teem meeting about what's been completed/what will be done today</li>
+                    </ul></h3>
+
+                    <h3>The three roles in a sprint team are:</h3>
+                    <h3><ul>
+                        <li>Scrum master</li>
+                        <li>Product owner</li>
+                        <li>Developers</li>
                     </ul></h3>
 
                     <div class="notes-content-subheader">
