--- a/notes/notes_topics/notes_pages/methods_of_production_notes.html
+++ b/notes/notes_topics/notes_pages/methods_of_production_notes.html
@@ -111,22 +111,22 @@
                     <tr class="notes-table-odd">
                         <td class="notes-table-math-one"><b>Set-up cost</b></td>
                         <td class="notes-table-math-two">Lowest</td>
-                        <td class="notes-table-math-three">-</td>
-                        <td class="notes-table-math-three">-</td>
+                        <td class="notes-table-math-three">-></td>
+                        <td class="notes-table-math-three">-></td>
                         <td class="notes-table-math-three">Highest</td>
                     </tr>
                     <tr class="notes-table-even">
                         <td class="notes-table-math-one"><b>Unit cost</b></td>
                         <td class="notes-table-math-two">Highest</td>
-                        <td class="notes-table-math-three">-</td>
-                        <td class="notes-table-math-three">-</td>
+                        <td class="notes-table-math-three"><-</td>
+                        <td class="notes-table-math-three"><-</td>
                         <td class="notes-table-math-three">Lowest</td>
                     </tr>
                     <tr class="notes-table-odd">
                         <td class="notes-table-math-one"><b>Labour intensity</b></td>
                         <td class="notes-table-math-two">Highest</td>
-                        <td class="notes-table-math-three">-</td>
-                        <td class="notes-table-math-three">-</td>
+                        <td class="notes-table-math-three"><-</td>
+                        <td class="notes-table-math-three"><-</td>
                         <td class="notes-table-math-three">Lowest</td>
                     </tr>
                     <tr class="notes-table-even">
@@ -146,9 +146,9 @@
                     <tr class="notes-table-even">
                         <td class="notes-table-math-one"><b>Speed of production</b></td>
                         <td class="notes-table-math-two">Slowest</td>
-                        <td class="notes-table-math-three">-</td>
-                        <td class="notes-table-math-three">-</td>
-                        <td class="notes-table-math-three">Highest</td>
+                        <td class="notes-table-math-three">-></td>
+                        <td class="notes-table-math-three">-></td>
+                        <td class="notes-table-math-three">Fastest</td>
                     </tr>
                 </table>
 
